# datasette-statistics

./: README.md  pyproject.toml  setup.py
datasette_statistics/: __init__.py
tests/: test_statistics.py
